--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -982,7 +982,7 @@ Landing Page
     border: none;
     padding: 0.5rem 1.5rem;
     border-radius: 30px;
-    background: var(0);
+    background: var(--orange-50);
     color: white !important;
   }
 
