--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -38,12 +38,16 @@
   --purplish-brown-30: hsl(10, 30%, 30%);
   --orange-25: hsl(10, 30%, 35%);
   --orange-30: hsl(10, 30%, 40%);
+  --orange-40: hsl(10, 30%, 50%);
 
 
   /* Brown */
-  --brown-20: hsl(27, 27%, 20%);
+  --brown-10: hsl(20, 29%, 10%);
+  --brown-20: hsl(28, 27%, 20%);
   --brown-30: hsl(27, 27%, 30%);
   --brown-40: hsl(27, 27%, 40%);
+  --brown-50: hsl(27, 27%, 50%);
+  --brown-60: hsl(27, 27%, 60%);
   --brown-70: hsl(27, 27%, 70%);
   --brown-80: hsl(27, 27%, 80%);
   --brown-85: hsl(27, 27%, 85%);
@@ -179,7 +183,7 @@ Landing Page
   position: sticky;
   top: 0;
   z-index: 10;
-  background: var(--brown-20)
+  background: var(--brown-10)
 }
 
 .landing-page-navbar-container {
@@ -614,14 +618,14 @@ Landing Page
   font-size: clamp(0.9rem, 1vw + 1rem, 1.1rem);
 }
 
-.landing-page-topic-likes-and-message {
+.landing-page-topic-likes-and-post_count {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 1rem;
 }
 
-.landing-page-topic-message, 
+.landing-page-topic-post_count, 
 .landing-page-topic-like {
   display: flex;
   align-items: center;
@@ -1208,8 +1212,7 @@ Landing Page
     height: 100%;
     border-radius: 15px;
     padding: 1rem;
-    background: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0));
-
+    background: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0.2));
     gap: 0.2rem;
     align-content: end;
   }
@@ -1244,7 +1247,7 @@ Landing Page
   .landing-page-featured-post:nth-child(3) > 
   .landing-page-featured-post-text-content > 
   .landing-page-featured-post-content {
-    max-width: 400px;
+    max-width: 600px;
     font-size: 1rem;
     letter-spacing: 0.07rem;
     line-height: 1.5;
@@ -1256,12 +1259,6 @@ Landing Page
     font-size: 2rem;
     max-width: 400px;
   }
-
-  /* .landing-page-posts {
-    gap: 1rem;
-    row-gap: 2rem;
-  } */
-
 }
 
 /* 
@@ -3371,16 +3368,6 @@ TOPIC POSTS
 =============
 USER REGISTER
 ============= */
-/* .user-register-main-container {
-  min-height: calc(100dvh - 57.19px);
-  background:  linear-gradient(to top,rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),url('images/bg_img.webp');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-
-  display: grid;
-} */
-
 .user-register-container {
   position: relative;
   min-height: calc(100dvh - 57.19px);
@@ -3643,15 +3630,286 @@ USER LOGIN
 FOOTER
 ====== */
 .footer-container {
-  height: 50dvh;
+  background: var(--brown-20);
+  padding-top: 4rem;
+}
+
+.footer-container__contents {
+  width: 95%;
+  max-width: 1000px;
+  margin: 0 auto;
+  display: grid;
+  gap: 2rem;
+  align-content: start;
+}
+
+.footer-container__brand-container {
+  display: grid;
+  align-content: start;
+  gap: 1rem;
+}
+
+.footer-container__logo {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.footer-container__brand-logo {
+  width: 45px;
+  height: 100%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  border-radius: 50%;
+  display: block;
+  background: var(--orange-30);
+  padding: 0.3rem
+}
+
+.footer-container__brand-name {
+  font-size: 2rem;
+  font-weight: 600;
+  color: white;
+  line-height: 0;
+}
+
+.footer-container__brand-text > p {
+  color: var(--brown-80);
+  letter-spacing: 0.07rem;
+  line-height: 1.5;
+  max-width: 500px;
+}
+
+.footer-container__quick-links {
+  display: grid;
+  gap: 1.5rem;
+  align-content: start;
+}
+
+.quick-links-header {
+  color: white;
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+
+.quick-links {
+  display: grid;
+  gap: 0.5rem
+}
+
+.quick-nav-link > a {
+  color: var(--brown-80)
+}
+
+.active-quick-link {
+  color: var(--orange-50) !important;
+  font-weight: 600;
+}
+
+.social-links {
+  display: grid;
+  gap: 1.5rem;
+  align-self: start;
+}
+
+.social-links-header {
+  color: white;
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+
+.social-links-container {
+  display: flex;
+  justify-content: start;
+  gap: 1rem;
+}
+
+.social-links-container > a {
+  font-size: 1.7rem;
+  color: var(--brown-60);
+}
+
+.contact-us-container {
+  display: grid;
+  align-content: start;
+  gap: 1.5rem;
+  max-width: 400px;
+}
+
+.contact-us-header {
+  color: white;
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+
+.contacts {
+  display: grid;
+  align-content: start;
+  gap: 2rem;
+  max-width: 450px;
+}
+
+.contact {
+  display: grid;
+  align-content: start;
+  gap: 0.6rem;
+}
+
+.address {
+  display: flex;
+  align-items: start;
+  gap: 1rem;
+}
+
+.address > i {
+  font-size: 1.4rem;
+  color: var(--brown-40);
+  padding-top: 0.3rem
+}
+
+.address > p {
+  color: var(--brown-80);
+  font-size: 0.9rem;
+  letter-spacing: 0.07rem;
+  line-height: 1.5;
+}
+
+.email {
+  display: flex;
+  align-items: start;
+  gap: 1rem;
+}
+
+.email > i {
+  font-size: 1.4rem;
+  color: var(--brown-40);
+  padding-top: 0.3rem
+}
+
+.email > a {
+  color: var(--brown-80);
+  font-size: 0.9rem;
+  letter-spacing: 0.07rem;
+  padding-top: 0.3rem;
+  border-bottom: 2px solid transparent;
+}
+
+.phone {
+  display: flex;
+  align-items: start;
+  gap: 1rem;
+}
+
+.phone > i {
+  font-size: 1.4rem;
+  color: var(--brown-40);
+  padding-top: 0.3rem
+}
+
+.phone > a {
+  color: var(--brown-80);
+  font-size: 0.9rem;
+  letter-spacing: 0.07rem;
+  border-bottom: 2px solid transparent;
+}
+
+@media (hover) {
+  .phone > a:hover,
+  .email > a:hover{
+    border-bottom: 2px solid var(--focus);
+  }
+}
+
+.contact-form {
+  display: grid;
+  gap: 0.5rem;
+}
+
+.contact-form > label {
+  color: var(--brown-90);
+  font-weight: 500;
+}
+.contact-form > input {
+  padding: 0.7rem 1rem;
+  border-radius: 5px;
+  border: none;
+  font-size: 1rem;
+  letter-spacing: 0.05rem;
+  background: var(--brown-70);
+}
+
+.contact-form > textarea {
+  padding: 0.8rem 1rem;
+  border-radius: 5px;
+  border: none;
+  resize: none;
+  height: 150px;
+  letter-spacing: 0.05rem;
+  line-height: 1.4;
+  font-size: 1rem;
+  background: var(--brown-70);
+}
+
+#email:focus,
+#message:focus{
+  outline: 3px solid var(--focus);
+}
+
+.contact-form > button {
+  padding: 0.8rem 1rem;
+  border-radius: 5px;
+  border: none;
+  color: white;
+  background: var(--orange-50);
+  text-transform: uppercase;
+  letter-spacing: 0.07rem;
+  font-weight: 500;
+  margin-top: 0.3rem;
+  cursor: pointer;
+}
+
+@media (hover) {
+  .contact-form > button:hover {
+    outline: 2px solid var(--focus);
+  }
+}
+
+@media (hover){
+  .ocial-links-container > a:hover {
+    outline: 2px solid var(--focus)
+  }
+}
+
+.copy-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  padding: 1.5rem 0;
   background: var(--brown-30)
 }
 
+.copy-right-text {
+  color: var(--brown-95);
+  letter-spacing: 0.05rem;
+  line-height: 1.5;
+  text-wrap: balance;
+  font-size: 1rem;
+  text-align: center;
+}
 
-
-
-
-
-
-
-
+@media (min-width: 570px) {
+  .footer-container__contents {
+    width: 90%;
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10rem;
+    row-gap: 3rem;
+  }
+  .footer-container__contents > *:nth-child(1),
+  .footer-container__contents > *:nth-child(4){
+    flex: 1;
+  }
+}
