--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -3721,12 +3721,25 @@ FOOTER
 .social-links-container {
   display: flex;
   justify-content: start;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .social-links-container > a {
   font-size: 1.7rem;
   color: var(--brown-60);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 35px;
+  aspect-ratio: 1/1;
+  border-radius: 5px;
+}
+
+@media (hover){
+  .social-links-container > a:hover {
+    outline: 2px solid var(--focus)
+    
+  }
 }
 
 .contact-us-container {
@@ -3871,12 +3884,6 @@ FOOTER
 @media (hover) {
   .contact-form > button:hover {
     outline: 2px solid var(--focus);
-  }
-}
-
-@media (hover){
-  .ocial-links-container > a:hover {
-    outline: 2px solid var(--focus)
   }
 }
 
