--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -175,6 +175,14 @@ textarea {
   font-size: clamp(0.95rem, 1vw + 0.8rem, 1.1rem);
 }
 
+.error-message {
+  color: var(--error-text)
+}
+
+.success-message {
+  color: var(--success-text)
+}
+
 /* 
 ============
 Landing Page
@@ -850,7 +858,7 @@ Landing Page
 }
 
 .landing-page-email-sub-form > input:focus {
-  outline: 2px solid var(--orange-50);
+  outline: 2px solid var(--focus);
 }
 
 .landing-page-email-sub-btn {
@@ -1942,28 +1950,6 @@ Posts
 ===========
 Post Detail
 =========== */
-.post-detail-author-profile {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem
-}
-
-.post-detail-author-img {
-  width: 40px;
-  aspect-ratio: 1/1;
-  display: block;
-}
-
-.post-detail-post-author {
-  color: var(--black-80);
-  font-weight: 500;
-}
-
-.post-detail-date-posted {
-  color: var(--black-80);
-  font-size: 0.9rem;
-}
-
 .post-detail-post-title {
   color: white;
   text-wrap: pretty;
@@ -2016,8 +2002,29 @@ Post Detail
   gap: 0.8rem;
 }
 
+.post-detail-author-info-container {
+  display: grid;
+  align-content: start;
+  gap: 0.3rem;
+}
+
+.post-detail-author-and-date {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 0.5rem;
+  row-gap: 0.3rem;
+  color: var(--black-40);
+}
+
+.post-detail-author-and-date > img {
+  width: 27px;
+  height: auto;
+  display: block;
+}
+
 .post-detail-container__post-title {
-  color: var(--purplish-brown-15);
+  color: var(--brown-10);
   line-height: 1.4;
   letter-spacing: 0.04rem;
   font-size: 1.25rem;
@@ -2029,7 +2036,7 @@ Post Detail
   letter-spacing: 0.05rem;
   line-height: 1.5;
   text-wrap: pretty;
-  color: var(--purplish-brown-20);
+  color: var(--black-30);
 }
 
 .post-detail-container__like-and-reply {
@@ -2340,7 +2347,6 @@ Post Detail
   align-items: start;
   flex-wrap: wrap;
   gap: 0.5rem;
-  padding: 1rem 0;
   padding-bottom: 1.5rem;
   border-bottom: 1px solid var(--brown-80);
 }
@@ -2352,6 +2358,7 @@ Post Detail
 
 .post-detail-comments__user-profile {
   display: flex;
+  flex-wrap: wrap;
   gap: 0.5rem
 }
 
@@ -2362,7 +2369,7 @@ Post Detail
 }
 
 .post-detail-comments__user-image {
-  width: 40px;
+  width: 27px;
   height: auto;
   display: block;
 }
@@ -2370,16 +2377,9 @@ Post Detail
 .post-detail-username-and-date {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   gap: 0.5rem;
-}
-
-.post-detail-comments__username {
-  color: var(--black-30);
-  font-size: 0.9rem;
-}
-
-.post-detail-comments__date-posted {
-  color: var(--black-30);
+  color: var(--black-40);
   font-size: 0.9rem;
 }
 
@@ -2387,13 +2387,12 @@ Post Detail
   display: grid;
   align-items: center;
   gap: 0.5rem;
-  margin-left: 2.5rem;
 }
 
 .post-detail-comments__content {
   line-height: 1.6;
   letter-spacing: 0.07rem;
-  color: var(--purplish-brown-20);
+  color: var(--black-15);
 }
 
 .post-comment-btns {
@@ -2616,8 +2615,8 @@ Post Detail
       flex: 2
   }
 
-  .post-detail-container__like-and-reply {
-    gap: 1.5rem;
+  .post-detail-comments__comment {
+    padding-top: 1rem;
   }
 }
 
@@ -2695,6 +2694,7 @@ My Posts
 .my-posts-main-container {
   display: grid;
   align-content: start;
+  min-height: 80dvh;
   width: 95%;
   max-width: 1000px;
   margin: 0 auto;
@@ -2704,13 +2704,6 @@ My Posts
 .my-posts-container {
   display: grid;
   gap: 2rem;
-}
-
-.my-posts-container__message {
-  color: rgb(11, 148, 11);
-  letter-spacing: 0.07rem;
-  font-weight: 600;
-
 }
 
 .my-posts-container__posts {
@@ -2850,14 +2843,13 @@ My Posts
 My Comments
 =========== */
 .my-comments-container {
-  min-height: 100dvh;
+  min-height: 80dvh;
   width: 95%;
   max-width: 1000px;
   margin: 0 auto;
-
   display: grid;
-  gap: 2rem;
-  align-content: start;
+  gap: 1rem;
+  align-items: start;
   padding: 2rem 0;
 }
 
@@ -2865,10 +2857,13 @@ My Comments
   display: grid;
   gap: 0.8rem;
   align-content: start;
-  background: white;
-  padding: 1rem;
-  border-radius: 10px;
-  background: var(--brown-90);
+  padding-bottom: 1.5rem;
+  border-bottom: 1px solid var(--brown-80);
+}
+
+.my-comments-container__my-comment:last-child {
+  padding-bottom: 0rem !important;
+  border-bottom: none;
 }
 
 .my-comments-date-and-time {
@@ -2933,19 +2928,18 @@ My Comments
   gap: 1rem;
   padding: 1rem;
   border-radius: 8px;
-  background: var(--brown-85);
+  background: var(--brown-95);
 }
 
 .update-comment-textarea {
   width: 100%;
-  resize: vertical;
+  resize: none;
   border-radius: 8px;
   padding: 1.3rem;
   font-size: clamp(0.9rem, 1vw + 0.5rem, 1rem);
   letter-spacing: 0.07rem;
   line-height: 1.5;
-  background: var(--brown-90);
-  color: var(--purplish-brown-20);
+  color: var(--brown-10);
   border: none;
   text-wrap: pretty;
 }
@@ -2978,11 +2972,11 @@ My Comments
 
 @media screen and (min-width: 600px) {
   .my-comments-container {
-    width: 90%;
+    gap: 2rem;
   }
 
-  .my-comments-container__my-comment {
-    padding: 2rem;
+  .my-comments-container {
+    width: 90%;
   }
 
   .update-comment-form {
@@ -2993,7 +2987,6 @@ My Comments
 @media screen and (min-width: 1000px) {
   .my-comments-container {
     padding: 3rem 0;
-    padding-bottom: 4rem;
   }
 }
 /* 
@@ -3133,7 +3126,7 @@ Create Post
 .create-post__select:focus,
 .create-post__input:focus,
 .create-post__textarea:focus {
-  outline: 2px solid rgb(162, 162, 255);
+  outline: 2px solid var(--focus);
   border: 1px solid transparent;
 }
 
@@ -3445,8 +3438,7 @@ USER REGISTER
   display: grid;
   align-content: center;
   gap: 2rem;
-
-  background: linear-gradient(to top,rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.2));
+  background: linear-gradient(to top,hsl(10, 29%, 5%),rgba(99, 61, 54, 0.1));
   padding: 1.3rem;
   padding-top: 5rem;
 }
@@ -3476,7 +3468,7 @@ USER REGISTER
 }
 
 .user-register__input:focus {
-  outline: 2px solid rgb(164, 164, 255);
+  outline: 2px solid var(--focus);
   border: 1px solid transparent
 }
 
@@ -3539,8 +3531,8 @@ USER REGISTER
   .user-register {
     max-width: 450px;
     padding: 1.3rem;
-    border-radius: 10px;
-    background: linear-gradient(to top,rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
+    border-radius: 8px;
+    background: linear-gradient(to top,rgba(20, 13, 12, 0.85), rgba(20, 13, 12, 0.85));
   }
 }
 
@@ -3585,8 +3577,8 @@ USER LOGIN
   display: grid;
   align-content: center;
   gap: 2rem;
-
-  background: linear-gradient(to top,rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.2));
+  background: linear-gradient(to top,hsl(10, 29%, 5%),rgba(99, 61, 54, 0.1)
+  );
   padding: 1.3rem;
   padding-top: 5rem;
 }
@@ -3681,9 +3673,52 @@ USER LOGIN
   .user-login {
     max-width: 450px;
     padding: 1.3rem;
-    border-radius: 10px;
-    background: linear-gradient(to top,rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
+    border-radius: 8px;
+    background: linear-gradient(to top,rgba(20, 13, 12, 0.85), rgba(20, 13, 12, 0.85));
   }
+}
+
+/* 
+======
+LOGOUT
+======*/
+.logout-container {
+  min-height:80dvh; 
+  width:90%; 
+  max-width:450px; 
+  margin: 0 auto;
+  display: grid;
+  align-content: start;
+  gap: 1.3rem;
+  padding: 3rem 0;
+}
+
+.logout-container > h2 {
+  letter-spacing: 0.05rem;
+  color: var(--brown-10);
+}
+
+.logout-container > button {
+  justify-self: start;
+  padding: 0.8rem 1rem;
+  background: var(--black-40);
+  border-radius: 25px;
+  color: white;
+  letter-spacing: 0.05rem;
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.logout-container > a {
+  letter-spacing: 0.05rem;
+  color: var(--orange-50);
+  font-weight: 500;
+  justify-self: start;
+  font-size: 1.1rem;
+  display: flex;
+  align-items: center;
+  gap: 0.3rem
 }
 /* 
 ======
@@ -3895,13 +3930,9 @@ FOOTER
 
 .contact-form {
   display: grid;
-  gap: 0.5rem;
+  gap: 0.8rem;
 }
 
-.contact-form > label {
-  color: var(--brown-90);
-  font-weight: 500;
-}
 .contact-form > input {
   padding: 0.7rem 1rem;
   border-radius: 5px;
@@ -3937,7 +3968,6 @@ FOOTER
   text-transform: uppercase;
   letter-spacing: 0.07rem;
   font-weight: 500;
-  margin-top: 0.3rem;
   cursor: pointer;
 }
 
